# Customer_Outflow

./: .dockerignore  LICENCE  README.md  koyeb.yaml  nixpacks.toml  pyproject.toml  requirements.txt
data/: README.md
data/processed/: feature_names.json  medians.json  prepare_medians.py  prepare_scaler.py  scaler.pkl  scaler_feature_names.json  summary_report.txt  test_data.csv
data/raw/: internet_service_churn.csv
data/results/: initial_report.json  model_evaluation.json  summary_report.txt
docker/: README.md  docker-compose.yml  dockerfile
models/: model_GradientBoosting.joblib  model_HistGradientBoosting.joblib  model_LogisticRegression.joblib
notebooks/: 01_Analyze_EDA.ipynb  01_analyze_eda.py  02_preprocessing.ipynb  02_preprocessing.py  03_model_training.ipynb  03_model_training.py  04_evaluation.ipynb  04_evaluation.py  README.md  test.ipynb
results/: model_evaluation.json
src/: README.md  __init__.py  app_layout.py  callbacks.py  data_preparation.py  evaluation.py  faker_new_client.py  graph_processing.py  model_training.py  run_pipeline.py  shared.py  train_incremental.py
tests/: test_app.py
